avoid crasher from unusual odt document fdo#42785